placement du header

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     font-family: "Abhaya Libre";
 }
 
+@keyframes anim { 
+    from { transform: translateX(0%) } 
+    to { transform: translateX(400%) }  
+  }
+
 html {
     height: 100%;
 }
@@ -80,7 +85,7 @@ footer {
     height: 90vh;
 }
 
-.section.entete {
+header {
     margin: 10% 0 10% 0;
     height: auto;
 
