--- a/style.css
+++ b/style.css
@@ -42,14 +42,16 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
+
+    padding-top: 2%;
+
 }
 
 
 
 footer {
-    margin-top: auto;
-    height: 40px;
+    padding-bottom: 2%;
+    padding-top: 2%;
     width: 100%;
     text-align: center;
 }
@@ -183,15 +185,45 @@ img {
     border-radius: 5%;
     border-color: rgb(73, 80, 87);
     margin: 0 2% 0 2%;
+    width:28.5vw;
+    height: 40vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
 
 .couverture:hover{
     filter: brightness(50%);
     border-width: 0px;
-    width: 44%;
+    width: 31vw;
+    height: 45vh;
     animation-duration: 10s;
 }
 
+.couverture:nth-child(1){
+    background-image: url("./img/couverture/couverture_paysage.jpg");
+
+}
+
+.couverture:nth-child(2){
+    background-image: url("./img/couverture/couverture_solysse.jpg");
+
+}
+
+.couverture:nth-child(3){
+    background-image: url("./img/couverture/couverture_paranoia_douce.jpg");
+
+}
+
+.couverture:nth-child(4){
+    background-image: url("./img/couverture/couverture_portrait.jpg");
+
+}
+
+.carrousel{
+    display: flex;
+    flex-direction: row;
+}
 
 p.propos {
     width: 45%;
