--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+
 }
 
 .page {
@@ -32,6 +33,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
+    padding: 0 20px;
 }
 
 
@@ -67,7 +69,7 @@ footer {
 
 .lien a {
     text-decoration: none;
-    font-size: 32px;
+    font-size: 2.5vw;
     color: white;
 
 }
@@ -100,7 +102,7 @@ header {
 h1 {
     font-family: "Tarekah";
     font-weight: normal;
-    font-size: 150px;
+    font-size: 8vw;
 }
 
 .signature {
@@ -139,21 +141,21 @@ h1 {
 }
 
 h2 {
-    font-size: 100px;
+    font-size: 5vw;
     font-weight: normal;
     display: flex;
     justify-content: center;
 }
 
 p {
-    font-size: 40px;
+    font-size: 2vw;
 }
 
 .ligne {
-    height: 1px;
-    width: 80%;
+    height: 1vh;
+    width: 60vw;
     background-color: white;
-    padding: 10px;
+    padding: 0.2vh;
     box-shadow: 0 0 7px 7px white;
 }
 
@@ -161,26 +163,31 @@ img {
     width: 40%;
 }
 
+
+
+.carrousel {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+}
+
+
 .couverture {
     position: relative;
-    width: 28.5vw;
     height: 40vh;
     transition: 0.5s;
     border: 20px solid rgb(73, 80, 87);
-    border-radius: 5%;
-     overflow: hidden; 
 }
 
-.couverture img{
+.couverture img {
     width: 100%;
     height: 100%;
     display: block;
     object-fit: cover;
-    border-radius: 5%;
     transition: 0.5s;
 }
 
-.text{
+.text {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -192,26 +199,21 @@ img {
     opacity: 0;
     transition: 0.5s;
     color: white;
+    text-align: center;
 }
 
 .couverture:hover {
     border-width: 0;
+    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
 }
 
 .couverture:hover img {
-  transform: scale(1.1);
-  filter:brightness(50%);
+    transform: scale(1.1);
+    filter: brightness(50%);
 }
 
-.couverture:hover .text{
+.couverture:hover .text {
     opacity: 1;
-}
-
-
-.carrousel {
-    display: flex;
-    flex-direction: row;
-    gap: 2%;
 }
 
 
@@ -264,25 +266,49 @@ p.propos {
 }
 
 h3 {
-    font-size: 50px
+    font-size: 50px;
 }
 
 .resume {
     font-size: 25px;
 }
 
-.section.titre{
+.section.titre {
     height: 60vh;
 }
 
-.galerie{
-    display: grid;
-
-    grid-template-columns: repeat(auto-fit, 33%);
+.galerie {
+    display: flex;
+    flex-direction: row;    
+    gap: 2%;               
     justify-content: center;
-    
 }
 
-.galerie img{
+.galerie:has(img) {
+    grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+
+}
+
+
+.galerie img {
+    width: 100%;            
+    height: auto;           
+    display: block;
+    object-fit: cover;       
+    transition: 0.5s;        
+}
+
+.galerie img:hover{
+    transform: scale(1.3);
+    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
+}
+
+.galerie video {
     width: 100%;
+}
+
+@media (min-width: 480px) {
+    .page{
+        
+    }
 }
