--- a/style.css
+++ b/style.css
@@ -67,14 +67,14 @@ footer {
     margin: 0 70px;
 }
 
-.lien a {
+a {
     text-decoration: none;
     font-size: 2.5vw;
     color: white;
 
 }
 
-.lien a:hover {
+a:hover {
     text-decoration: underline;
 }
 
@@ -83,7 +83,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 70vh;
 }
 
 header {
@@ -252,8 +252,13 @@ p.propos {
 }
 
 .svg {
-    width: 90px;
-    margin: 30px;
+    width: 5vw;
+    margin: 2vw;
+    transition: 0.5s;
+}
+
+.svg:hover {
+    transform: scale(1.3);
 }
 
 .info {
@@ -263,6 +268,10 @@ p.propos {
     align-items: center;
     gap: 20vw;
     width: 100%;
+}
+
+.info a{
+    text-decoration: none;
 }
 
 h3 {
@@ -279,8 +288,8 @@ h3 {
 
 .galerie {
     display: flex;
-    flex-direction: row;    
-    gap: 2%;               
+    flex-direction: row;
+    gap: 2%;
     justify-content: center;
 }
 
@@ -291,14 +300,14 @@ h3 {
 
 
 .galerie img {
-    width: 100%;            
-    height: auto;           
+    width: 100%;
+    height: auto;
     display: block;
-    object-fit: cover;       
-    transition: 0.5s;        
+    object-fit: cover;
+    transition: 0.5s;
 }
 
-.galerie img:hover{
+.galerie img:hover {
     transform: scale(1.3);
     box-shadow: 0 0 15px 15px rgb(73, 80, 87);
 }
@@ -307,8 +316,40 @@ h3 {
     width: 100%;
 }
 
-@media (min-width: 480px) {
-    .page{
-        
+
+.section.logiciel img {
+    width: 20%;
+}
+
+.extra {
+    width: 50%;
+    transition: 0.5s;
+}
+
+.extra:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
+}
+
+#page-projet .section {
+    margin: 5% 0 5% 0;
+}
+
+
+@media (max-width: 768px) {
+    .section.projet {
+        margin-top: 10vh;
+        height: auto;
+    }
+
+    .carrousel {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+    }
+
+    .couverture {
+        height: 30vh;
     }
 }
