--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
     src: url("./police/Abhaya_Libre/AbhayaLibre-Regular.ttf") format("truetype");
     font-family: "Abhaya Libre";
 }
+/*Permet de d'importer une police locale */
 
-
-
+/*Style du html et body */
 html {
     height: 100%;
 }
 
-
+/*Le contenu du body restera au centre lorsque le viewport est plus grand horizontalement que celle-ci*/
 body {
     background-color: rgb(33, 37, 41);
     font-family: "Abhaya Libre";
@@ -26,6 +26,7 @@ body {
 
 }
 
+/* Style du containeur principal. */
 .page {
     max-width: 1440px;
     min-height: 100vh;
@@ -36,7 +37,7 @@ body {
     padding: 0 20px;
 }
 
-
+/*Navigation */
 nav {
     display: flex;
     justify-content: center;
@@ -55,7 +56,7 @@ footer {
     text-align: center;
 }
 
-
+/*Enlève le style que la list a par défault */
 .lien {
     list-style: none;
     display: flex;
@@ -92,19 +93,23 @@ header {
 
 }
 
+/* Style de la signature */
 .heros {
-    display: grid;
+    display: grid; /*M'a permis de superposer les signatures */
     justify-items: center;
     position: relative;
 
 }
 
+
+/* Le h1 est utlisé dans la signature et les titre des projets*/
 h1 {
     font-family: "Tarekah";
     font-weight: normal;
     font-size: 8vw;
 }
 
+/*Le grid-area m'a permis de superposer les signature */ 
 .signature {
     font-style: italic;
     grid-area: 1/1/2/2;
@@ -179,6 +184,7 @@ img {
     border: 20px solid rgb(73, 80, 87);
 }
 
+/*La transition permet d'adoucir et de mettre une durée au changement */
 .couverture img {
     width: 100%;
     height: 100%;
@@ -201,17 +207,17 @@ img {
     color: white;
     text-align: center;
 }
-
+/*Le :hover permet de mettre des effets au faire des changements au survol de la souris */
 .couverture:hover {
     border-width: 0;
     box-shadow: 0 0 15px 15px rgb(73, 80, 87);
 }
-
+/*Lorsque couverture est survoler, l'image obtient un filtre et devient plus grands */
 .couverture:hover img {
     transform: scale(1.1);
     filter: brightness(50%);
 }
-
+/*Lorsque la couverture et survoler, le texte apparait */
 .couverture:hover .text {
     opacity: 1;
 }
@@ -221,6 +227,7 @@ p.propos {
     width: 45%;
 }
 
+/*Permet de mettre une distance entre les éléments*/
 .info.propos {
     gap: 10vw;
 }
@@ -270,6 +277,7 @@ p.propos {
     width: 100%;
 }
 
+/*Enleve le text-decoration, puisque l'autre a au survol a un text-direction*/
 .info a{
     text-decoration: none;
 }
@@ -292,7 +300,7 @@ h3 {
     gap: 2%;
     justify-content: center;
 }
-
+/*:has permet de mettre des paramètres au .galerie si il a des images */
 .galerie:has(img) {
     grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
 
@@ -335,21 +343,29 @@ h3 {
     margin: 5% 0 5% 0;
 }
 
-
+/* Ceci permet de changer la disposition ou les valeurs lorsque le viewport répond aux restrictions*/
+/*Ceci et les vw/vh/% ont permis de faire la page responsive */
 @media (max-width: 768px) {
+    /*Permet de changer la taille de celui-ci */
     .section.projet {
         margin-top: 10vh;
         height: auto;
     }
-
+/*Permet de changer la direction du carrousel */
     .carrousel {
         display: flex;
         flex-direction: column;
         gap: 20px;
 
     }
-
+    /*Permet de changer la taille de celui-ci */
     .couverture {
         height: 30vh;
+    }
+/*Permet de changer la direction du carrousel */
+    .info{
+        flex-direction: column;
+        gap: 5vw;
+        text-align: center;
     }
 }
