--- a/style.css
+++ b/style.css
@@ -308,17 +308,21 @@ h3 {
 
 .galerie {
     display: flex;
-    flex-direction: row;
-    gap: 2%;
-    justify-content: center;
-
-}
-
-/*:has permet de mettre des paramètres au .galerie si il a des images */
-.galerie:has(img) {
+    gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
-
+    justify-items: center;
 }
+
+.galerie div {
+    display: flex;          /* transforme chaque div en conteneur flex */
+    justify-content: center; /* centre horizontalement son contenu */
+}
+
+.galerie img:hover {
+    transform: scale(1.3);
+    box-shadow: 0 0 15px 15px rgb(73, 80, 87);
+}
+
 
 
 .galerie img {
@@ -331,9 +335,42 @@ h3 {
 
 
 
+
+
 .galerie video {
-    width: 100%;
+    width: 70%;
 }
+
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    cursor: pointer;
+}
+
+.lightbox-img {
+    max-width: 100%;
+    max-height: 100%;
+
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 50px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
 
 
 .section.logiciel img {
@@ -352,6 +389,8 @@ h3 {
 
 
 
+
+
 /* Ceci permet de changer la disposition ou les valeurs lorsque le viewport répond aux restrictions*/
 /*Ceci et les vw/vh/% ont permis de faire la page responsive */
 @media (max-width: 768px) {
@@ -361,14 +400,17 @@ h3 {
         height: auto;
     }
 
+
     .carrousel {
         flex-direction: column;
+        width: 80%;
         gap: 20px;
     }
 
     .couverture {
         height: 30vh;
         border-width: 10px;
+        width: 100%;
     }
 
     .info {
@@ -426,7 +468,7 @@ h3 {
     }
 
     .signature.deux {
-        padding: 2px 0px 0px 0px;
+        padding: 4px 0px 0px 0px;
     }
 
     .signature.trois {
@@ -436,5 +478,42 @@ h3 {
     .signature.quatre {
         padding: 15px 0px 0px 0px;
     }
+
+    .categorie {
+        bottom: -7px;
+    }
+
+}
+
+
+@media (max-width: 1440px) {
+    footer {
+        padding-top: 10vh;
+        padding-bottom: 5vh;
+    }
+
+    .page.propos footer {
+        padding-top: 10vh;
+    }
+
+    .texte h3 {
+        font-size: 20vw;
+    }
+
+    .resume {
+        font-size: 3vh;
+    }
+
+    .text h3 {
+        margin-bottom: 0.5em;
+
+    }
+
+
+    .text p {
+        margin-top: -0.5em;
+        width: 80%;
+    }
+
 
 }
